--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,7 @@ jobs:
         include:
           - os: windows-latest
             build_type: Release
+            enable_ui: on
     steps:
     - uses: actions/checkout@v3
       with:
