--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,17 +2,9 @@ name: build
 on: [push, pull_request]
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
+    runs-on: self-hosted
     strategy:
       fail-fast: false
-      matrix:
-        os: [windows-latest]
-        build_type: [Release]
-        enable_ui: [on]
-        include:
-          - os: windows-latest
-            build_type: Release
-            enable_ui: on
     steps:
     - uses: actions/checkout@v3
       with:
