--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: ilammy/msvc-dev-cmd@v1
       if: runner.os == 'Windows'
     - name: Generating Makefiles
-      shell: bash
+      shell: powershell
       run: |
         export enable_ccache=off
         curl -L https://github.com/blueloveTH/aseprite/releases/download/v0.01/skia.zip --output skia.zip
@@ -28,7 +28,7 @@ jobs:
           -DSKIA_LIBRARY_DIR=./skia/out/Release-x64 \
           -DSKIA_LIBRARY=./skia/out/Release-x64/skia.lib
     - name: Compiling
-      shell: bash
+      shell: powershell
       run: |
         cd build && ninja
     - uses: actions/upload-artifact@v4.6.2
