--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,16 +17,12 @@ jobs:
       shell: bash
       run: |
         export enable_ccache=off
-        curl -L https://github.com/blueloveTH/aseprite/archive/refs/tags/v1.0.zip --output skia.zip
-        curl -L https://github.com/blueloveTH/aseprite/releases/download/v0.01/libcrypto-1_1-x64.dll --output libcrypto-1_1-x64.dll
-        7z x skia.zip
         cmake -S . -B build -G Ninja \
-        -DCMAKE_BUILD_TYPE=Release \
-          -DENABLE_CCACHE=$enable_ccache \
+          -DCMAKE_BUILD_TYPE=Release \
           -DLAF_BACKEND=skia \
-          -DSKIA_DIR=./skia \
-          -DSKIA_LIBRARY_DIR=./skia/out/Release-x64 \
-          -DSKIA_LIBRARY=./skia/out/Release-x64/skia.lib
+          -DSKIA_DIR=.\skia \
+          -DSKIA_LIBRARY_DIR=.\skia\out\Release-x64 \
+          -DSKIA_LIBRARY=.\skia\out\Release-x64\skia.lib
     - name: Compiling
       shell: bash
       run: |
