--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,9 +20,9 @@ jobs:
         cmake -S . -B build -G Ninja \
           -DCMAKE_BUILD_TYPE=Release \
           -DLAF_BACKEND=skia \
-          -DSKIA_DIR=.\skia \
-          -DSKIA_LIBRARY_DIR=.\skia\out\Release-x64 \
-          -DSKIA_LIBRARY=.\skia\out\Release-x64\skia.lib
+          -DSKIA_DIR=C:/skia \
+          -DSKIA_LIBRARY_DIR= C:/skia/out/Release-x64 \
+          -DSKIA_LIBRARY= C:/skia/out/Release-x64/skia.lib
     - name: Compiling
       shell: bash
       run: |
