--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,12 +17,13 @@ jobs:
       shell: bash
       run: |
         export enable_ccache=off
+        curl -L https://github.com/blueloveTH/aseprite/releases/download/v0.01/libcrypto-1_1-x64.dll --output libcrypto-1_1-x64.dll
         cmake -S . -B build -G Ninja \
           -DCMAKE_BUILD_TYPE=Release \
           -DLAF_BACKEND=skia \
           -DSKIA_DIR=C:/skia \
           -DSKIA_LIBRARY_DIR= C:/skia/out/Release-x64 \
-          -DSKIA_LIBRARY= C:/skia/out/Release-x64/skia.lib
+          -DSKIA_LIBRARY= C:/skia/out/Release-x64/skia.lib \
     - name: Compiling
       shell: bash
       run: |
