--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,6 @@ jobs:
         submodules: 'recursive'
     - name: ccache
       uses: hendrikmuhs/ccache-action@v1.2.18
-    - uses: seanmiddleditch/gha-setup-ninja@master
     - uses: ilammy/msvc-dev-cmd@v1
       if: runner.os == 'Windows'
     - name: Generating Makefiles
@@ -27,8 +26,7 @@ jobs:
     - name: Compiling
       shell: bash
       run: |
-        cd build
-        VERBOSE=1 ninja
+        cd build && ninja
     - uses: actions/upload-artifact@v4.6.2
       with:
         name: aseprite
