--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
           -DSKIA_LIBRARY_DIR=C:/skia/out/Release-x64 \
           -DSKIA_LIBRARY=C:/skia/out/Release-x64/skia.lib \
     - name: Compiling
-      shell: pwsh
+      shell: shell
       run: ninja -C build
     - uses: actions/upload-artifact@v4.6.2
       with:
