--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
         submodules: 'recursive'
     - name: ccache
       uses: hendrikmuhs/ccache-action@v1.2.18
-    - uses: seanmiddleditch/gha-setup-ninja@v4
+    - uses: seanmiddleditch/gha-setup-ninja@v6
     - uses: ilammy/msvc-dev-cmd@v1
       if: runner.os == 'Windows'
     - name: Generating Makefiles
@@ -25,7 +25,7 @@ jobs:
           -DSKIA_LIBRARY_DIR=C:/skia/out/Release-x64 \
           -DSKIA_LIBRARY=C:/skia/out/Release-x64/skia.lib \
     - name: Compiling
-      shell: powershell
+      shell: cmd
       run: ninja -C build
     - uses: actions/upload-artifact@v4.6.2
       with:
